# MTC_Pick_and_Place

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_urdf/share/ament_index/resource_index/package_run_dependencies/: arm_urdf
install/arm_urdf/share/ament_index/resource_index/parent_prefix_path/: arm_urdf
install/arm_urdf/share/arm_urdf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arm_urdf/share/arm_urdf/cmake/: arm_urdfConfig-version.cmake  arm_urdfConfig.cmake
install/arm_urdf/share/arm_urdf/config/: display.rviz
install/arm_urdf/share/arm_urdf/environment/: ament_prefix_path.dsv  path.dsv
install/arm_urdf/share/arm_urdf/launch/: display.launch.py  pick_and_place.launch.py  pnp_rviz.launch.py  spawner.launch.py
install/arm_urdf/share/arm_urdf/meshes/: AX_12A_01.stl  AX_12A_02.stl  AX_12A_03.stl  AX_12A_04.stl  Gear_Flange_Driven.stl  Gear_Flange_Motor.stl  Soft_finger_1.stl  Soft_finger_2.stl  base_link.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
install/arm_urdf/share/arm_urdf/urdf/: (Unsaved).urdf  arm_urdf.urdf  arm_urdf.xacro  gen3_lite_gen3_lite_2f.xacro  robot_model_6_dof.xacro
install/arm_urdf_moveit_config/share/ament_index/resource_index/package_run_dependencies/: arm_urdf_moveit_config
install/arm_urdf_moveit_config/share/ament_index/resource_index/parent_prefix_path/: arm_urdf_moveit_config
install/arm_urdf_moveit_config/share/arm_urdf_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_urdf_moveit_config/share/arm_urdf_moveit_config/cmake/: arm_urdf_moveit_configConfig-version.cmake  arm_urdf_moveit_configConfig.cmake
install/arm_urdf_moveit_config/share/arm_urdf_moveit_config/config/: arm_urdf.ros2_control.xacro  arm_urdf.srdf  arm_urdf.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  mtc.rviz  pilz_cartesian_limits.yaml  ros2_controllers.yaml
install/arm_urdf_moveit_config/share/arm_urdf_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/arm_urdf_moveit_config/share/arm_urdf_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/linkattacher_msgs/share/linkattacher_msgs/: package.sh
install/pick_and_place/lib/pick_and_place/: gripper_monitor  mtc_tutorial  pick_and_place
install/pick_and_place/share/ament_index/resource_index/package_run_dependencies/: pick_and_place
install/pick_and_place/share/ament_index/resource_index/parent_prefix_path/: pick_and_place
install/pick_and_place/share/pick_and_place/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pick_and_place/share/pick_and_place/cmake/: pick_and_placeConfig-version.cmake  pick_and_placeConfig.cmake
install/pick_and_place/share/pick_and_place/environment/: ament_prefix_path.dsv  path.dsv
install/pick_and_place/share/pick_and_place/launch/: pick_and_place.launch.py  pick_new.launch.py
install/ros2_linkattacher/share/ament_index/resource_index/parent_prefix_path/: ros2_linkattacher
install/ros2_linkattacher/share/ros2_linkattacher/: package.sh
log/: latest_build
src/arm_urdf/: CMakeLists.txt
src/arm_urdf/config/: arm.world
src/arm_urdf/launch/: pnp_rviz.launch.py  spawner.launch.py
src/arm_urdf/src/: pick_and_place.cpp  pick_place_new.cpp
src/arm_urdf/urdf/: arm_urdf.urdf  arm_urdf.xacro  cylinder.urdf
src/arm_urdf_moveit_config/: .setup_assistant
src/arm_urdf_moveit_config/config/: arm_urdf.ros2_control.xacro  arm_urdf.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mtc.rviz  ros2_controllers.yaml
src/arm_urdf_moveit_config/launch/: rsp.launch.py
src/pick_and_place/: CMakeLists.txt
src/pick_and_place/launch/: pick_new.launch.py
src/pick_and_place/scripts/: send_angles.py
src/pick_and_place/src/: gazebo_link_attacher.cpp  mtc.cpp  pick_and_place.cpp  pick_and_place_new.cpp
